fix table styles in dark mode

--- a/src/components/Unsettled/style.less
+++ b/src/components/Unsettled/style.less
@@ -1,33 +1,11 @@
 @import (reference) "../../theme/application";
 .unsettled-merchants
 {
-    .ant-table,th
+    .ant-table
     {
-    background-color: transparent;
-    border: none;
-    }
-    th
-     {
-    background: transparent !important; 
-    text-align: center !important;
-    color : @secondaryTextColor !important; 
-    }
-    .ant-table-tbody > tr > td
-    {
-        border-bottom: none;   
-        &:hover
+        th
         {
-            background-color: transparent;
-        }
-    }
-    .ant-table-tbody > tr
-    {
-        &:hover
-        {
-        
-            td{
-                background-color: fade(@secondaryTextColor, 10%);
-            }    
+            text-align: right !important;
         }
     }
 }
